Legal area responsive  Done

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           some form,
           by injected humour.</p>
       </div>
-      <div class="mt-10 grid grid-cols-3">
+      <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
         <!--A card start - 1 -->
         <div
           class="card bg-base-100 rounded-none border-r border-b border-line-col hover:border-1 hover:border-line-col hover:bg-line-col">
