--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           },
           backgroundImage: {
             'banner-img': "url('images/banner.png')",
+            'slider1-img': "url('images/slider1.jpg')",
+            'slider2-img': "url('images/slider2.jpg')",
+            'slider3-img': "url('images/slider3.jpg')",
           }
         }
       }
@@ -187,8 +190,53 @@
         <!-- A card ends - 6 -->
 
     </section>
-
     <!-- Legal practise area section ends -->
+
+    <!-- Clients say section starts -->
+    <section class="mt-16">
+      <div class="w-1/2 mx-auto">
+        <h2 class="text-center">The Legal Practice Area</h2>
+        <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have
+          suffered alteration in
+          some form,
+          by injected humour.</p>
+      </div>
+
+      <!-- Carousel starts -->
+      <div class="carousel w-full">
+        <!-- Slide - 1 starts -->
+        <!-- Background image & Slide part -->
+        <div id="slide1" class="carousel-item relative w-full bg-banner-img">
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide4" class="text-white">❮</a>
+            <a href="#slide2" class="text-white">❯</a>
+          </div>
+          <!-- Text Over bg part -->
+          <div class="hero min-h-screen bg-banner-img">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md">
+                <div class="flex justify-center">
+                  <img src="images/profile-pic.png" alt="">
+                </div>
+                <h3 class="mb-5 text-5xl font-bold">Awlad Hossain</h3>
+                <h5>UIX Designer</h5>
+                <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                  piece of classical Latin literature
+                  from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                  College in Virginia,
+                  looked up one of the more obscure Latin words, consectetur.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Slide - 1 Ends -->
+
+      </div>
+      <!-- Carousel ends -->
+
+    </section>>
+    <!-- Client say section ends -->
   </main>
   <footer>
 
