--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
           },
           backgroundImage: {
             'banner-img': "url('images/banner.png')",
-            'slider1-img': "url('images/slider1.jpg')",
-            'slider2-img': "url('images/slider2.jpg')",
-            'slider3-img': "url('images/slider3.jpg')",
-          }
-        }
-      }
+            'slider1': "url('images/slider-1.jpg')",
+            'slider2': "url('images/slider-2.jpg')",
+            'slider3': "url('images/slider-3.jpg')",
+          },
+        },
+      },
     }
   </script>
   <!-- custom styles -->
@@ -231,6 +231,90 @@
           </div>
         </div>
         <!-- Slide - 1 Ends -->
+
+        <!-- Slide - 2 starts -->
+        <!-- Background image & Slide part -->
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide1" class="text-white">❮</a>
+            <a href="#slide3" class="text-white">❯</a>
+          </div>
+          <!-- Text Over bg part -->
+          <div class="hero min-h-screen bg-slider1">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md">
+                <div class="flex justify-center">
+                  <img src="images/profile-pic.png" alt="">
+                </div>
+                <h3 class="mb-5 text-5xl font-bold">Awlad Hossain</h3>
+                <h5>UIX Designer</h5>
+                <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                  piece of classical Latin literature
+                  from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                  College in Virginia,
+                  looked up one of the more obscure Latin words, consectetur.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Slide - 2 Ends -->
+
+        <!-- Slide - 3 starts -->
+        <!-- Background image & Slide part -->
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="text-white">❮</a>
+            <a href="#slide4" class="text-white">❯</a>
+          </div>
+          <!-- Text Over bg part -->
+          <div class="hero min-h-screen bg-slider2">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md">
+                <div class="flex justify-center">
+                  <img src="images/profile-pic.png" alt="">
+                </div>
+                <h3 class="mb-5 text-5xl font-bold">Awlad Hossain</h3>
+                <h5>UIX Designer</h5>
+                <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                  piece of classical Latin literature
+                  from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                  College in Virginia,
+                  looked up one of the more obscure Latin words, consectetur.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Slide - 3 Ends -->
+
+        <!-- Slide - 4 starts -->
+        <!-- Background image & Slide part -->
+        <div id="slide4" class="carousel-item relative w-full">
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide3" class="text-white">❮</a>
+            <a href="#slide1" class="text-white">❯</a>
+          </div>
+          <!-- Text Over bg part -->
+          <div class="hero min-h-screen bg-slider3">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md">
+                <div class="flex justify-center">
+                  <img src="images/profile-pic.png" alt="">
+                </div>
+                <h3 class="mb-5 text-5xl font-bold">Awlad Hossain</h3>
+                <h5>UIX Designer</h5>
+                <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                  piece of classical Latin literature
+                  from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                  College in Virginia,
+                  looked up one of the more obscure Latin words, consectetur.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Slide - 4 Ends -->
 
       </div>
       <!-- Carousel ends -->
