--- a/index.html
+++ b/index.html
@@ -319,8 +319,56 @@
       </div>
       <!-- Carousel ends -->
 
-    </section>>
+    </section>
     <!-- Client say section ends -->
+
+    <!-- FAQ starts -->
+    <section class="mt-16">
+      <div class="w-1/2 mx-auto">
+        <h2 class="text-center">Frequently Asked Any Questions</h2>
+        <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have
+          suffered alteration in some form,
+          by injected humour.</p>
+      </div>
+      <div class="flex flex-col md:flex-row">
+        <!-- Accordion from Daisy Khala -->
+        <div class="flex-1">
+          <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" checked="checked" />
+            <div class="collapse-title text-xl font-medium">
+              Click to open this one and close others
+            </div>
+            <div class="collapse-content">
+              <p>hello</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title text-xl font-medium">
+              Click to open this one and close others
+            </div>
+            <div class="collapse-content">
+              <p>hello</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title text-xl font-medium">
+              Click to open this one and close others
+            </div>
+            <div class="collapse-content">
+              <p>hello</p>
+            </div>
+          </div>
+        </div>
+        <!-- Accordion Ends -->
+        <div class="flex-1">
+          <img src="images/faq.png" alt="">
+        </div>
+      </div>
+    </section>
+    <!-- FAQ ends -->
+
   </main>
   <footer>
 
