FAQ Part Startede

--- a/index.html
+++ b/index.html
@@ -369,6 +369,92 @@
     </section>
     <!-- FAQ ends -->
 
+    <!-- Contact us part starts -->
+    <section class="mt-16">
+      <div class="w-1/2 mx-auto">
+        <h2 class="text-center">Frequently Asked Any Questions</h2>
+        <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have
+          suffered alteration in some form,
+          by injected humour.</p>
+      </div>
+      <div class="flex flex-col md:flex-row">
+        <div class="flex-1 mt-10 grid grid-cols-1 md:grid-cols-2">
+          <!--A card start - 1 -->
+          <div
+            class="card bg-base-100 rounded-none border-r border-b border-line-col hover:border-1 hover:border-line-col hover:bg-line-col">
+            <figure class="px-10 pt-10">
+              <img src="./images/business.png" alt="Icon" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Business Law</h2>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration
+                in some form,
+                by injected humour.</p>
+              <img class="mt-4" src="images/forward-icon.svg" alt="">
+            </div>
+          </div>
+          <!-- A card ends - 1 -->
+          <!--A card start - 2 -->
+          <div
+            class="card bg-base-100 rounded-none border-b border-line-col hover:border-1 hover:border-line-col hover:bg-line-col">
+            <figure class="px-10 pt-10">
+              <img src="./images/business.png" alt="Icon" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Business Law</h2>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration
+                in some form,
+                by injected humour.</p>
+              <img class="mt-4" src="images/forward-icon.svg" alt="">
+            </div>
+          </div>
+          <!-- A card ends - 2 -->
+          <!--A card start - 3 -->
+          <div
+            class="card bg-base-100 rounded-none border-l border-b border-line-col hover:border-1 hover:border-line-col hover:bg-line-col">
+            <figure class="px-10 pt-10">
+              <img src="./images/business.png" alt="Icon" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Business Law</h2>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration
+                in some form,
+                by injected humour.</p>
+              <img class="mt-4" src="images/forward-icon.svg" alt="">
+            </div>
+          </div>
+          <!-- A card ends - 3 -->
+          <!--A card start - 4 -->
+          <div
+            class="card bg-base-100 rounded-none border-r border-line-col hover:border-1 hover:border-line-col hover:bg-line-col">
+            <figure class="px-10 pt-10">
+              <img src="./images/business.png" alt="Icon" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Business Law</h2>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration
+                in some form,
+                by injected humour.</p>
+              <img class="mt-4" src="images/forward-icon.svg" alt="">
+            </div>
+          </div>
+          <!-- A card ends - 4-->
+        </div>
+        <div class="flex-1">
+          <form action="" class="flex flex-col space-y-2">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+          </form>
+        </div>
+    </section>
+    <!-- Contact us part ends -->
   </main>
   <footer>
 
